--- a/navbar/index.html
+++ b/navbar/index.html
@@ -10,24 +10,21 @@
 </head>
 <body>
     <div class="wrapper">
-        <header class="header">
+        <header>
             <span class="header-logo">Nav Bar</span>
             <div class="hamburger-wrapper">
-                <input type="checkbox" id="toggler">
+                <input type="checkbox" class="toggler">
                 <div class="hamburger"><div></div></div>
+                <nav class="nav-menu-wrapper">
+                    <ul class="nav-menu">
+                        <li><a class="nav-menu-item" href="#">Home</a></li>
+                        <li><a class="nav-menu-item" href="#">About</a></li>
+                        <li><a class="nav-menu-item" href="#">Contact</a></li>
+                        <li><a class="nav-menu-item" href="#">FAQ</a></li>
+                    </ul>
+                </nav>
             </div>  
         </header>
-        <section class="content">
-            <nav class="nav-menu-wrapper">
-                <ul class="nav-menu">
-                    <li><a class="nav-menu-item" href="#">Home</a></li>
-                    <li><a class="nav-menu-item" href="#">About</a></li>
-                    <li><a class="nav-menu-item" href="#">Contact</a></li>
-                    <li><a class="nav-menu-item" href="#">FAQ</a></li>
-                </ul>
-            </nav>
-        </section>
     </div>
-    <script src="script.js"></script>
 </body>
 </html>
